--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,9 @@ edition = "2024"
 anyhow = "1.0.98"
 arrow = { version = "55.1.0", features = ["default", "ipc_compression"] }
 clap = { version = "4.5.40", features = ["default", "derive"] }
+clio = { version = "0.3.5", features = ["clap-parse"] }
 datafusion = "47.0.0"
+futures = "0.3.31"
 parquet = "55.1.0"
 sysinfo = "0.35.2"
 tokio = { version = "1.45.1", features = ["full"] }
