--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,9 @@ datafusion = "47.0.0"
 futures = "0.3.31"
 parquet = "55.1.0"
 tokio = { version = "1.45.1", features = ["full"] }
+
+[dev-dependencies]
+tempfile = "3.15.0"
+assert_cmd = "2.0.16"
+predicates = "3.1.2"
+nix = { version = "0.30.1", features = ["user"] }
