--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ arrow = { version = "55.1.0", features = ["default", "ipc_compression"] }
 clap = { version = "4.5.40", features = ["default", "derive"] }
 clio = { version = "0.3.5", features = ["clap-parse"] }
 datafusion = "47.0.0"
+duckdb = "1.3.0"
 futures = "0.3.31"
 parquet = "55.1.0"
 tokio = { version = "1.45.1", features = ["full"] }
