--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ datafusion = "47.0.0"
 duckdb = "1.3.0"
 futures = "0.3.31"
 parquet = "55.1.0"
+tempfile = "3.15.0"
 tokio = { version = "1.45.1", features = ["full"] }
 
 [dev-dependencies]
