--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,18 +5,23 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1.0.98"
-arrow = { version = "55.1.0", features = ["default", "ipc_compression"] }
+arrow = { version = "55.2.0", features = ["default", "ipc_compression"] }
 clap = { version = "4.5.40", features = ["default", "derive"] }
 clio = { version = "0.3.5", features = ["clap-parse"] }
-datafusion = "47.0.0"
-duckdb = "1.3.0"
+datafusion = "48.0.0"
+duckdb = "1.3.1"
 futures = "0.3.31"
-parquet = "55.1.0"
-tempfile = "3.15.0"
+parquet = { version = "55.2.0", features = [
+  "default",
+  "async",
+  "json",
+  "arrow_canonical_extension_types",
+] }
+tempfile = "3.20.0"
 tokio = { version = "1.45.1", features = ["full"] }
 
 [dev-dependencies]
-tempfile = "3.15.0"
-assert_cmd = "2.0.16"
-predicates = "3.1.2"
+tempfile = "3.20.0"
+assert_cmd = "2.0.17"
+predicates = "3.1.3"
 nix = { version = "0.30.1", features = ["user"] }
