--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ clio = { version = "0.3.5", features = ["clap-parse"] }
 datafusion = "48.0.0"
 duckdb = "1.3.1"
 futures = "0.3.31"
+pg_escape = "0.1.0"
 parquet = { version = "55.2.0", features = [
   "default",
   "async",
