--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "daisy"
 version = "0.1.0"
 edition = "2024"
 
+[lib]
+name = "daisy"
+crate-type = ["cdylib", "rlib"]
+
 [dependencies]
 anyhow = "1.0.98"
 arrow = { version = "55.2.0", features = ["default", "ipc_compression"] }
@@ -18,8 +22,13 @@ parquet = { version = "55.2.0", features = [
   "json",
   "arrow_canonical_extension_types",
 ] }
+pyo3 = { version = "0.22", features = ["abi3-py39", "anyhow", "extension-module"], optional = true }
 tempfile = "3.20.0"
 tokio = { version = "1.45.1", features = ["full"] }
+
+[features]
+default = []
+python = ["pyo3"]
 
 [dev-dependencies]
 tempfile = "3.20.0"
