--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "daisy"
+name = "chiffon"
 version = "0.1.0"
 edition = "2024"
 
 [lib]
-name = "daisy"
+name = "chiffon"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
