--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["maturin>=1.7,<2.0"]
 build-backend = "maturin"
 
 [project]
-name = "daisy-rs"
+name = "chiffon"
 version = "0.1.0"
 description = "Fast Arrow format conversions"
 requires-python = ">=3.9"
@@ -30,5 +30,5 @@ dev-dependencies = [
 
 [tool.maturin]
 python-source = "python"
-module-name = "daisy._daisy"
+module-name = "chiffon._chiffon"
 features = ["pyo3/extension-module"]
