--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,15 @@
 [package]
-name = "chiffon"
+name = "silk_chiffon"
 version = "0.1.0"
 edition = "2024"
 
 [lib]
-name = "chiffon"
+name = "silk_chiffon"
 crate-type = ["cdylib", "rlib"]
+
+[[bin]]
+name = "silk-chiffon"
+path = "src/main.rs"
 
 [dependencies]
 anyhow = "1.0.98"
@@ -22,7 +26,11 @@ parquet = { version = "55.2.0", features = [
   "json",
   "arrow_canonical_extension_types",
 ] }
-pyo3 = { version = "0.22", features = ["abi3-py39", "anyhow", "extension-module"], optional = true }
+pyo3 = { version = "0.22", features = [
+  "abi3-py39",
+  "anyhow",
+  "extension-module",
+], optional = true }
 tempfile = "3.20.0"
 tokio = { version = "1.45.1", features = ["full"] }
 
