--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,9 +26,43 @@ dev-dependencies = [
     "pyarrow>=14.0.0",
     "maturin>=1.7.0",
     "duckdb>=1.3.1",
+    "ruff>=0.1.0",
+    "pyright>=1.1.402",
+    "pip>=25.1.1",
 ]
 
 [tool.maturin]
-python-source = "python"
-module-name = "silk_chiffon._silk_chiffon"
 features = ["pyo3/extension-module"]
+
+[tool.ruff]
+# Same line length as Black
+line-length = 88
+
+# Target Python 3.9+
+target-version = "py39"
+
+[tool.ruff.lint]
+# Enable pycodestyle (E), pyflakes (F), and isort (I) rules
+select = ["E", "F", "I"]
+
+# Ignore specific rules if needed
+ignore = [
+    "E501",  # Line too long (handled by formatter)
+]
+
+[tool.ruff.format]
+# Use double quotes for strings
+quote-style = "double"
+
+# Indent with spaces
+indent-style = "space"
+
+# Unix-style line endings
+line-ending = "lf"
+
+[tool.pytest.ini_options]
+# pytest configuration
+testpaths = ["tests"]
+python_files = ["test_*.py", "*_test.py"]
+python_classes = ["Test*"]
+python_functions = ["test_*"]
