--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -1,4 +1,6 @@
 {
+  "venvPath": ".",
+  "venv": ".venv",
   "include": ["silk_chiffon.pyi", "tests"],
   "typeCheckingMode": "strict",
   "pythonVersion": "3.9",
