--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -2,7 +2,6 @@ name: Rust CI
 
 on:
   push:
-    branches: [main]
   pull_request:
     branches: [main]
 
@@ -30,7 +29,7 @@ jobs:
         run: cargo fmt -- --check
 
       - name: Run clippy
-        run: cargo clippy --all-targets --all-features -- -D warnings
+        run: cargo lint
 
       - name: Run tests
         run: cargo test --verbose
