Fix up test stuff

--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -38,10 +38,10 @@ jobs:
         run: |
           rye sync --no-lock
 
-      - name: Build Python module
+      - name: Build and install Python module
         run: |
           rye run maturin build --release --features python
-          rye run pip install --force-reinstall target/wheels/*.whl
+          rye run python -m pip install --force-reinstall target/wheels/*.whl
 
       - name: Check Python formatting
         run: rye fmt --check
