--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,19 +17,22 @@ jobs:
         os: [ubuntu-latest, macos-latest]
         rust: [stable]
     steps:
-      - uses: actions/checkout@v4
+      - name: Check out repository
+        uses: actions/checkout@v4
 
       - name: Install Rust
-        uses: actions-rust-lang/setup-rust-toolchain@v1
+        uses: dtolnay/rust-toolchain@stable
         with:
-          toolchain: ${{ matrix.rust }}
           components: rustfmt, clippy
+
+      - name: Install cargo-make
+        run: cargo install cargo-make
 
       - name: Check formatting
         run: cargo fmt -- --check
 
       - name: Run clippy
-        run: cargo lint
+        run: cargo make lint
 
       - name: Run tests
         run: cargo test --verbose
