--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -36,6 +36,7 @@ jobs:
 
       - name: Install dependencies
         run: |
+          rye pin {{ matrix.python-version }}
           rye sync --no-lock
 
       - name: Build and install Python module
