--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -21,6 +21,8 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v4
 
+      - uses: opt-nc/setup-duckdb-action@v1.0.13
+
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
         with:
