--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -18,7 +18,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: opt-nc/setup-duckdb-action@v1.0.13
+      - name: Setup DuckDB
+        uses: opt-nc/setup-duckdb-action@v1.0.13
+        with:
+          version: v1.3.1
 
       - name: Install Rust
         uses: actions-rust-lang/setup-rust-toolchain@v1
