--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -21,16 +21,20 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v4
 
-      - name: Setup DuckDB
-        uses: opt-nc/setup-duckdb-action@v1.0.13
-        with:
-          version: v1.3.2
-
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
         with:
           toolchain: ${{ matrix.rust }}
           components: rustfmt, clippy
+
+      - name: Setup DuckDB (Ubuntu only)
+        if: ${{ matrix.os == 'ubuntu-latest' }}
+        uses: opt-nc/setup-duckdb-action@v1.0.13
+
+      - name: Setup DuckDB (macOS only)
+        if: ${{ matrix.os == 'macos-latest' }}
+        run: |
+          brew install duckdb
 
       - name: Install cargo-make
         run: cargo install cargo-make
