--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -32,9 +32,9 @@ jobs:
           sudo apt-get install -y curl unzip build-essential
           curl -L -O https://github.com/duckdb/duckdb/releases/download/v${DUCKDB_VERSION}/libduckdb-linux-amd64.zip
           unzip libduckdb-linux-amd64.zip -d libduckdb
-          mv libduckdb/duckdb.* /usr/local/include/
-          mv libduckdb/libduckdb.so /usr/local/lib/
-          ldconfig /usr/local/lib
+          sudo mv libduckdb/duckdb.* /usr/local/include/
+          sudo mv libduckdb/libduckdb.so /usr/local/lib/
+          sudo ldconfig /usr/local/lib
           rm -rf libduckdb libduckdb-linux-amd64.zip
 
       - name: Setup DuckDB (macOS only)
