--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -17,6 +17,8 @@ jobs:
     name: Python CI for ${{ matrix.python-version }} on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
+      # This defaults to true so we need to explicitly set it to false
+      fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest]
         python-version: ["3.11", "3.12", "3.13"]
