--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -48,45 +48,35 @@ jobs:
         with:
           toolchain: stable
 
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v5
+      - name: Install uv and set the python version
+        uses: astral-sh/setup-uv@v6
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Install Rye
-        uses: eifinger/setup-rye@v4
-        with:
-          enable-cache: true
-          cache-prefix: "rye-cache"
-
       - name: Install dependencies
-        env:
-          PYTHON_VERSION: ${{ matrix.python-version }}
-        run: |
-          rye pin $PYTHON_VERSION
-          rye sync --no-lock
+        run: uv sync --locked
 
       - name: Build and install Python module (Linux)
         if: matrix.os == 'ubuntu-latest'
         run: |
-          rye run maturin build --release --features python
-          rye run python -m pip install --force-reinstall target/wheels/*manylinux*.whl
+          uv run maturin build --release --features python
+          uv run python -m pip install --force-reinstall target/wheels/*manylinux*.whl
 
       - name: Build and install Python module (macOS)
         if: matrix.os == 'macos-latest'
         run: |
-          rye run maturin build --release --features python
-          rye run python -m pip install --force-reinstall target/wheels/*.whl
+          uv run maturin build --release --features python
+          uv run python -m pip install --force-reinstall target/wheels/*.whl
 
       - name: Check Python formatting
-        run: rye fmt --check
+        run: uv run ruff format --check
 
       - name: Lint Python code
-        run: rye lint
+        run: uv run ruff check
 
       - name: Type check
         if: matrix.python-version == '3.12' && matrix.os == 'ubuntu-latest'
-        run: rye run pyright
+        run: uv run pyright
 
       - name: Run Python tests
-        run: rye test
+        run: uv run pytest
