Try releasing a prerelease

--- a/.github/workflows/rust-release-dev.yml
+++ b/.github/workflows/rust-release-dev.yml
@@ -71,3 +71,6 @@ jobs:
         with:
           name: silk-chiffon-${{ runner.os }}-${{ runner.arch }}-rust-${{ matrix.rust }}-${{ matrix.BUILD_TARGET }}-${{ github.sha }}
           path: target/${{ matrix.BUILD_TARGET }}/silk-chiffon
+      - name: Publish built binary to GitHub releases
+        run: |
+          gh release create --generate-notes ./silk-chiffon/silk-chiffon#${{ runner.os }}-${{ runner.arch }}-rust-${{ matrix.rust }}-${{ matrix.BUILD_TARGET }}-${{ github.sha }} --prerelease
