--- a/.github/workflows/rust-release-dev.yml
+++ b/.github/workflows/rust-release-dev.yml
@@ -75,7 +75,9 @@ jobs:
         env:
           GH_TOKEN: ${{ github.token }}
         run: |
-          SILK_CHIFFON_VERSION="$(cargo pkgid | cut -d# -f2 | cut -d@ -f2)"
-          git tag -a "v${SILK_CHIFFON_VERSION}-${{ github.sha }}" -m "Release ${SILK_CHIFFON_VERSION}-${{ github.sha }}"
-          git push origin "v${SILK_CHIFFON_VERSION}-${{ github.sha }}"
-          gh release create "v${SILK_CHIFFON_VERSION}-${{ github.sha }}" --generate-notes ./target/release/silk-chiffon#${{ runner.os }}-${{ runner.arch }}-rust-${{ matrix.rust }}-${{ matrix.BUILD_TARGET }}-${{ github.sha }} --prerelease
+          SILK_CHIFFON_VERSION="$(cargo pkgid | cut -d# -f2 | cut -d@ -f2)-${{ github.sha }}-$(date -u +%Y-%m-%d_%H:%M:%S)"
+          ARCH="$(echo ${{ runner.arch }} | tr '[:upper:]' '[:lower:]')"
+          OS="$(echo ${{ runner.os }} | tr '[:upper:]' '[:lower:]')"
+          git tag -a "v${SILK_CHIFFON_VERSION}" -m "Release ${SILK_CHIFFON_VERSION}"
+          git push origin "v${SILK_CHIFFON_VERSION}"
+          gh release create "v${SILK_CHIFFON_VERSION}" --generate-notes ./target/release/silk-chiffon#${OS}-${ARCH}-rust-${{ matrix.rust }}-${{ matrix.BUILD_TARGET }}-${{ github.sha }} --prerelease
