--- a/.github/workflows/rust-release-dev.yml
+++ b/.github/workflows/rust-release-dev.yml
@@ -3,10 +3,30 @@ name: Rust Release Dev
 on:
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 env:
   DUCKDB_VERSION: 1.3.2
 
 jobs:
+  create-tag:
+    runs-on: ubuntu-latest
+    outputs:
+      tag: ${{ steps.tag.outputs.tag }}
+    steps:
+      - uses: actions/checkout@v4
+      - name: Create tag
+        id: tag
+        run: |
+          TAG="dev-$(date -u +%Y%m%d%H%M%S)-$(git rev-parse --short HEAD)"
+          echo "tag=${TAG}" >> $GITHUB_OUTPUT
+
+          # Create and push tag
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git tag "${TAG}"
+          git push origin "${TAG}"
   rust-release-dev:
     name: Rust Release Dev
     runs-on: ${{ matrix.os }}
@@ -20,6 +40,8 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
+        with:
+          ref: ${{ needs.create-tag.outputs.tag }}
       - name: Setup DuckDB (Ubuntu amd64 only)
         if: ${{ matrix.os == 'ubuntu-latest' }}
         run: |
@@ -75,9 +97,6 @@ jobs:
         env:
           GH_TOKEN: ${{ github.token }}
         run: |
-          SILK_CHIFFON_VERSION="$(cargo pkgid | cut -d# -f2 | cut -d@ -f2)-${{ github.sha }}-timestamp-$(date -u +%Y-%m-%d-%H-%M-%S)"
           ARCH="$(echo ${{ runner.arch }} | tr '[:upper:]' '[:lower:]')"
           OS="$(echo ${{ runner.os }} | tr '[:upper:]' '[:lower:]')"
-          git tag -a "v${SILK_CHIFFON_VERSION}" -m "Release ${SILK_CHIFFON_VERSION}"
-          git push origin "v${SILK_CHIFFON_VERSION}"
-          gh release create "v${SILK_CHIFFON_VERSION}" --generate-notes ./target/release/silk-chiffon#${OS}-${ARCH}-rust-${{ matrix.rust }}-${{ matrix.BUILD_TARGET }}-${{ github.sha }} --prerelease
+          gh release create "v${{ needs.create-tag.outputs.tag }}" --generate-notes ./target/release/silk-chiffon#${OS}-${ARCH} --prerelease
