--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -55,6 +55,7 @@ jobs:
       - name: Install uv and set the python version
         uses: astral-sh/setup-uv@v6
         with:
+          enable-cache: true
           python-version: ${{ matrix.python-version }}
 
       - name: Install dependencies
