--- a/.github/workflows/rust-release-dev.yml
+++ b/.github/workflows/rust-release-dev.yml
@@ -150,6 +150,7 @@ jobs:
       - name: Install uv and set Python version
         uses: astral-sh/setup-uv@v6
         with:
+          enable-cache: true
           python-version: ${{ matrix.python-version }}
 
       - name: Install dependencies
