--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,8 @@ sha2 = "0.10"
 tempfile = "3.20.0"
 tokio = { version = "1.46.1", features = ["full"] }
 sanitize-filename = "0.6.0"
+serde_json = "1.0"
+serde = { version = "1.0.219", features = ["derive"] }
 
 [features]
 default = []
