--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -1,9 +1,10 @@
 name: Python CI
 
 on:
-  push:
-  pull_request:
-    branches: [main]
+  # push:
+  # pull_request:
+  #   branches: [main]
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
