--- a/.github/workflows/python2.yaml
+++ b/.github/workflows/python2.yaml
@@ -24,6 +24,7 @@ jobs:
         platform:
           - runner: ubuntu-22.04
             target: x86_64
+            duckdb_target: linux-amd64
           # - runner: ubuntu-22.04
           #   target: x86
           # - runner: ubuntu-22.04
@@ -39,6 +40,17 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: 3.x
+      - name: Setup DuckDB (Ubuntu only)
+        if: ${{ matrix.platform.runner == 'ubuntu-22.04' }}
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y curl unzip build-essential
+          curl -L -O https://github.com/duckdb/duckdb/releases/download/v${DUCKDB_VERSION}/libduckdb-${{ matrix.platform.duckdb_target }}.zip
+          unzip libduckdb-${{ matrix.platform.duckdb_target }}.zip -d libduckdb
+          sudo mv libduckdb/duckdb.* /usr/local/include/
+          sudo mv libduckdb/libduckdb.so /usr/local/lib/
+          sudo ldconfig /usr/local/lib
+          rm -rf libduckdb libduckdb-${{ matrix.platform.duckdb_target }}.zip
       - name: Build wheels
         uses: PyO3/maturin-action@v1
         with:
