Try printing file size info

--- a/.github/workflows/python2.yaml
+++ b/.github/workflows/python2.yaml
@@ -44,7 +44,7 @@ jobs:
         if: ${{ matrix.platform.runner == 'ubuntu-22.04' }}
         run: |
           curl -L -O https://github.com/duckdb/duckdb/releases/download/v${DUCKDB_VERSION}/libduckdb-${{ matrix.platform.duckdb_target }}.zip && echo "Downloaded DuckDB" || echo "Failed to download DuckDB"
-          ls
+          ls -lah
           unzip libduckdb-${{ matrix.platform.duckdb_target }}.zip -d libduckdb
           sudo mv libduckdb/duckdb.* /usr/local/include/
           sudo mv libduckdb/libduckdb.so /usr/local/lib/
