--- a/.github/workflows/python2.yaml
+++ b/.github/workflows/python2.yaml
@@ -45,6 +45,7 @@ jobs:
         run: |
           curl -L -O https://github.com/duckdb/duckdb/releases/download/v${DUCKDB_VERSION}/libduckdb-${{ matrix.platform.duckdb_target }}.zip && echo "Downloaded DuckDB" || echo "Failed to download DuckDB"
           ls -lah
+          cat libduckdb-${{ matrix.platform.duckdb_target }}.zip
           unzip libduckdb-${{ matrix.platform.duckdb_target }}.zip -d libduckdb
           sudo mv libduckdb/duckdb.* /usr/local/include/
           sudo mv libduckdb/libduckdb.so /usr/local/lib/
