--- a/.github/workflows/python2.yaml
+++ b/.github/workflows/python2.yaml
@@ -15,6 +15,7 @@ on:
 
 env:
   DUCKDB_VERSION: 1.3.2
+  PYTHON_VERSION: 3.13
 
 permissions:
   contents: read
@@ -42,7 +43,12 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
-          python-version: 3.x
+          python-version: ${{ env.PYTHON_VERSION }}
+      - name: Install uv and set the python version
+        uses: astral-sh/setup-uv@v6
+        with:
+          enable-cache: true
+          python-version: ${{ env.PYTHON_VERSION }}
       - name: Setup DuckDB (Ubuntu only)
         if: ${{ matrix.platform.runner == 'ubuntu-22.04' }}
         run: |
@@ -63,7 +69,7 @@ jobs:
         uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.platform.target }}
-          args: --release --out dist --zig -i python3.13t
+          args: --release --out dist --zig --interpreter python${{ env.PYTHON_VERSION }}t --features python
           sccache: ${{ !startsWith(github.ref, 'refs/tags/') }}
           manylinux: auto
       - name: Upload wheels
@@ -72,31 +78,12 @@ jobs:
           name: wheels-linux-${{ matrix.platform.target }}
           path: dist
       - name: pytest
-        if: ${{ startsWith(matrix.platform.target, 'x86_64') }}
         shell: bash
         run: |
           set -e
-          python3 -m venv .venv
-          source .venv/bin/activate
-          pip install silk_chiffon --find-links dist --force-reinstall
-          pip install pytest
-          pytest
-      - name: pytest
-        if: ${{ !startsWith(matrix.platform.target, 'x86') && matrix.platform.target != 'ppc64' }}
-        uses: uraimo/run-on-arch-action@v2
-        with:
-          arch: ${{ matrix.platform.target }}
-          distro: ubuntu22.04
-          githubToken: ${{ github.token }}
-          install: |
-            apt-get update
-            apt-get install -y --no-install-recommends python3 python3-pip
-            pip3 install -U pip pytest
-          run: |
-            set -e
-            pip3 install silk_chiffon --find-links dist --force-reinstall
-            pytest
-
+          uv sync --locked
+          uv run pip install silk_chiffon --find-links dist --force-reinstall
+          uv run pytest
   sdist:
     runs-on: ubuntu-latest
     steps:
